hero slider workig

--- a/index.html
+++ b/index.html
@@ -39,23 +39,59 @@
         </div>
     </section>
 
-    <section>
-        <div class="hero-section container d-flex align-items-center">
-            <div class="hero-content">
-                <h1>Mackbook Pro</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos laborum pariatur provident illum qui autem nulla ab perspiciatis enim a.</p>
-                <div class="buy-now-btn">
-                    BUY NOW
+    <section class="bg-success">
+        <div class="container">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">hello 01</li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1">hello 02</li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active hero-section d-flex align-items-center">
+                        <div class="hero-content">
+                            <h1>Mackbook Pro</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos laborum pariatur provident illum qui autem nulla ab perspiciatis enim a.</p>
+                            <div class="buy-now-btn"> BUY NOW </div>
+                        </div>
+                        <div class="hero-image">
+                            <img src="./hot-gadgets/banner-products/product-1.png" class="heroimg" alt="">
+                        </div>
+                    </div>
+                    <div class="carousel-item hero-section d-flex align-items-center">
+                    <div class="hero-content">
+                            <h1>Mackbook Pro</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos laborum pariatur provident illum qui autem nulla ab perspiciatis enim a.</p>
+                            <div class="buy-now-btn"> BUY NOW </div>
+                        </div>
+                        <div class="hero-image">
+                            <img src="./hot-gadgets/banner-products/product-2.png" class="heroimg" alt="">
+                        </div>
+                    </div>
+                    <div class="carousel-item hero-section d-flex align-items-center">
+                        <div class="hero-content">
+                            <h1>Mackbook Pro</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos laborum pariatur provident illum qui autem nulla ab perspiciatis enim a.</p>
+                            <div class="buy-now-btn"> BUY NOW </div>
+                        </div>
+                        <div class="hero-image">
+                            <img src="./hot-gadgets/banner-products/product-3.png" class="heroimg" alt="">
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="hero-image">
-                <img src="./hot-gadgets/banner-products/product-1.png" class="heroimg" alt="">
-            </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
         </div>
     </section>
 
-
-
+    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
