--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
 
         <!-- Bootstrap CSS v5.2.1 -->
         <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
@@ -44,91 +44,38 @@
         </header>
 
         <main>
-            <!-- <section class="bg-success">
+            <section class="product-section">
                 <div class="container">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <div class="hero-section d-flex align-items-center">
-                                    <div class="hero-image">
-                                        <img src="./hot-gadgets/banner-products/product-1.png" class="heroimg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item hero-section d-flex align-items-center">
-                                <div class="hero-image">
-                                    <img src="./hot-gadgets/banner-products/slider-1.png" class="heroimg" alt="">
-                                </div>
-                            </div>
-                            <div class="carousel-item hero-section d-flex align-items-center">
-                                <div class="hero-image">
-                                    <img src="./hot-gadgets/banner-products/slider-3.png" class="heroimg" alt="">
-                                </div>
-                            </div>
+                    <div class="row align-items-center gy-5">
+                        <!-- Left Content -->
+                        <div class="col-md-6">
+                        <h2 class="fw-bold">Mackbook Pro</h2>
+                        <p class="text-muted mt-3">
+                            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.
+                        </p>
+                        <a href="#" class="btn btn-dark mt-4">BUY NOW →</a>
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
+                        <!-- Right Image -->
+                        <div class="col-md-6 position-relative d-flex justify-content-center">
+                        <div class="triangle-shape"></div>
+                        <img src="/hot-gadgets/banner-products/product-1.png" alt="Macbook Pro" class="macbook-img" />
+                        </div>
+                    </div>
+                <!-- Slider Dots -->
+                    <div class="slider-dots text-center">
+                        <span class="dot active"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
                     </div>
                 </div>
-            </section> -->
 
-            <section>
-                <div class="container bg-success">
-                    <div id="carouselExampleIndicators" class="carousel slide">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <div class="d-block w-100">
-                                <div class="hero-section d-flex align-items-center">
-                                    <div class="hero-content">
-                                        <h1>Mackbook Pro</h1>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim et dolorem ipsum accusamus placeat consectetur porro rerum quibusdam tenetur error.</p>
-                                        <button class="btn-1 d-flex"> <p>BUY NOW</p> 
-                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                            <path stroke-linecap="round" stroke-linejoin="round" d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                                            </svg>
-                                            
-                                        </button>
-                                    </div>
-                                    <div class="hero-image">
-                                        <img src="./hot-gadgets/banner-products/slider-1.png" class="heroimg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                        <img src="./hot-gadgets/banner-products/product-1.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                        <img src="./hot-gadgets/banner-products/slider-3.png" class="d-block w-100" alt="...">
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                    </div>
-                </div>
+                <!-- Vertical Text -->
+                <span class="best-products-text">BEST PRODUCTS</span>
+
+                <!-- Dots Pattern -->
+                <div class="dots-pattern"></div>
             </section>
+
         </main>
 
         <footer>
@@ -146,5 +93,6 @@
             integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
             crossorigin="anonymous"
         ></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
